# uninoto

./: .gitignore  AGENTS.md  FONT_SOURCES.md  LICENSE  NOTES.md  README.md  README_zh_CN.md  pyproject.toml  requirements.txt
font-viewer/: AGENTS.md  Cargo.toml
font-viewer/src/: app.rs  controls.rs  font_data.rs  glyph_data.rs  glyph_paint.rs  main.rs  util.rs
src/: download-noto.py  full-per-plane.py  merge-all.py  merge.py  plane-csv.py  validate.py
src/uninoto/: __init__.py  download_noto.py  font_io.py  full_per_plane.py  merge.py  merge_all.py  plane_csv.py  planes.py  sfd_to_ttf.py  source_selection.py  unicode_utils.py  validate.py
