[project]
name = "uninoto"
version = "1.0.0"
description = "Build large Unicode coverage fonts from downloaded Noto sources."
requires-python = ">=3.11"
dependencies = [
  "fonttools>=4.56.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["fontTools", "fontTools.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.black]
target-version = ["py311"]
